--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
     </ul>
     </div>
 
+    <hr>
+    <hr>
+    <h3>EJERCICIOS MODULO 2</h3>
+    <hr>
+
+    <div>
+        <h4><a style="color:darkgoldenrod" href="/pages/ejerciciosunidadn2.html" target="_blank">Haz click en el enlace para dirigirte a los ejercicios del modulo 2</a></h4>
+    </div>
 
 </body>
 </html>
