--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <hr>
 
     <div>
-        <h4><a style="color:darkgoldenrod" href="/pages/ejerciciosunidadn2.html" target="_blank">Haz click en el enlace para dirigirte a los ejercicios del modulo 2</a></h4>
+        <h4><a style="color:darkgoldenrod" href="./pages/ejerciciosunidadn2.html" target="_blank">Haz click en el enlace para dirigirte a los ejercicios del modulo 2</a></h4>
     </div>
 
 </body>
