--- a/pages/ejerciciosunidadn2.html
+++ b/pages/ejerciciosunidadn2.html
@@ -11,23 +11,23 @@
     <p><H4><a style="color: aliceblue;"> EJERCICIOS MODULO 2 </a></H4></p>
     <hr>
     <div>
-        <h4><a style="color:darkgoldenrod" href="/pages/item1.html" target="_blank">Haz click en el enlace para dirigirte a la Trivia</a></h4>
+        <h4><a style="color:darkgoldenrod" href="../pages/item1.html" target="_blank">Haz click en el enlace para dirigirte a la Trivia</a></h4>
     </div>
     <hr>
     <div>
-        <h4><a style="color:darkgoldenrod" href="/pages/item2.html" target="_blank">Haz click en el enlace para dirigirte al Formulario</a></h4>
+        <h4><a style="color:darkgoldenrod" href="../pages/item2.html" target="_blank">Haz click en el enlace para dirigirte al Formulario</a></h4>
     </div>
     <hr>
     <div>
-        <h4><a style="color:darkgoldenrod" href="/pages/item3.html" target="_blank">Haz click en el enlace para dirigirte a REACCIÓN A TECLAS DEL TECLADO</a></h4>
+        <h4><a style="color:darkgoldenrod" href="../pages/item3.html" target="_blank">Haz click en el enlace para dirigirte a REACCIÓN A TECLAS DEL TECLADO</a></h4>
     </div>
     <hr>
     <div>
-        <h4><a style="color:darkgoldenrod" href="/pages/item4.html" target="_blank">Haz click en el enlace para dirigirte al Ejercicio Setinterval Modulo 2</a></h4>
+        <h4><a style="color:darkgoldenrod" href="../pages/item4.html" target="_blank">Haz click en el enlace para dirigirte al Ejercicio Setinterval Modulo 2</a></h4>
     </div>
     <hr>
     <div>
-        <h4><a style="color:darkgoldenrod" href="/pages/item5.html" target="_blank">Haz click en el enlace para dirigirte a una función hecha por mi.</a></h4>
+        <h4><a style="color:darkgoldenrod" href="../pages/item5.html" target="_blank">Haz click en el enlace para dirigirte a una función hecha por mi.</a></h4>
     </div>
     <hr>
 </body>
