--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
         <h4><a style="color:darkgoldenrod" href="./pages/ejerciciosunidadn2.html" target="_blank">Haz click en el enlace para dirigirte a los ejercicios del modulo 2</a></h4>
     </div>
 
+
+    <h3>EJERCICIO MODULO 4</h3>
+    <hr>
+
+    <div>
+        <h4><a style="color:darkgoldenrod" href="./MoonStars.html" target="_blank">Haz click en el enlace para dirigirte al ejercicio del modulo 4</a></h4>
+    </div>
+
 </body>
 </html>
 
